# KPDL

./: best_keywords_atract.py  better-tokenize.py  create_idf.py  data_exlore.ipynb  data_exlore.py  eval_data.py  pyproject.toml  split_keywords.py
.jukit/: .jukit_info.json  best_keywords_atract_outhist.json  better-tokenize_outhist.json  create_idf_outhist.json  data_exlore_outhist.json  eval_data_outhist.json
keyBERT/: test.py
keyBERT/.jukit/: .jukit_info.json  test_outhist.json
vi_tokenizer/: __init__.py
